<resources>
    <string name="app_name">New Application</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sure_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="cancel">取消</string>
    <string name="find">发现</string>
    <string name="conversation">会话</string>
    <string name="contacts">联系人</string>
    <string name="setting">设置</string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>

    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="send_state">已读</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>

    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>

    <string name="search">搜索</string>

    <string name="new_friends">新朋友</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>

    <string name="title_activity_lost__found_">Lost_Found_Activity</string>
    <string name="title_activity_addactivity">Addactivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="list_no_data_lost">暂时还未有失物信息</string>
    <string name="list_no_data_found">暂时还未有招领信息</string>

    <string name="title_hint">标题</string>
    <string name="describe_hint">描述</string>
    <string name="photo_hint">手机</string>

    <string name="progress_loading">正在获取数据..</string>



    <string name="pull_to_refresh_top_pull">下拉刷新,使劲拉</string>
    <string name="pull_to_refresh_top_release">你敢放我就敢刷新</string>
    <string name="pull_to_refresh_top_refreshing">好嘞，刷新中...</string>
    <string name="pull_to_refresh_bottom_pull">使劲往上拉</string>
    <string name="pull_to_refresh_bottom_release">放开我就刷新</string>
    <string name="pull_to_refresh_bottom_refreshing">好嘞,刷新中...</string>
    <string name="title_activity_user_info">userInfo</string>
</resources>
