<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_set_avator"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/default_head"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/iv_arraw"
                style="@style/Smile.ImageView"
                android:layout_width="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/action_settings"
                android:src="@mipmap/register_bottom_arrow"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_nick"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_nick"
                style="@style/Smile.TextView._Black"
                android:drawablePadding="10dp"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/iv_nickarraw"
                style="@style/Smile.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@mipmap/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_name"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_set_name"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:textSize="18sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gender"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_gender"
                style="@style/Smile.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp"
                android:textSize="18sp"/>
            
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <Button
        android:id="@+id/btn_add_friend"
        style="@style/Smile.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_friend"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_chat"
        style="@style/Smile.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/chat"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_black"
        style="@style/Smile.Button.logout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/blacklist"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/layout_black_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_centerInParent="true"
            android:text="@string/black_tips"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>