<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_account"
                android:drawablePadding="25dp"
                android:hint="@string/username"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textColorHint="#ffdddddd"
                android:textSize="@dimen/text_size_large"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="25dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:textColorHint="#ffdddddd"
                android:textSize="@dimen/text_size_large"/>

             <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />
            
            <EditText
                android:id="@+id/et_SurePassword"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="25dp"
                android:hint="@string/sure_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:textColorHint="#ffdddddd"
                android:textSize="@dimen/text_size_large"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_email"
                android:drawablePadding="25dp"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:textColorHint="#ffdddddd"
                android:textSize="@dimen/text_size_large"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_register_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</RelativeLayout>
